--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,7 +1,41 @@
-<h2>Users</h2>
-<button (click)="addUser({firstName: 'Mary', lastName: 'Williams'})" 
+
+<button (click)="showUserForm = !showUserForm" class="btn btn-dark mb-3">Add User</button>
+<div *ngIf="showUserForm">
+  <h2>Add User</h2>
+
+  <form (submit)="onSubmit($event)">
+    <div class="form-group">
+      <label>First Name</label>
+      <input type="text" name="firstName" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <label>Age</label>
+      <input type="number" name="age" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <label>Street Address</label>
+      <input type="text" name="city" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <label>City</label>
+      <input type="text" name="city" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <label>State</label>
+      <input type="text" name="state" class="form-control">
+    </div>
+
+    <button (click)="addUser({firstName: 'Mary', lastName: 'Williams'})" 
 class="btn btn-block mb-3" [disabled]="!enableAdd">Add New User</button>
 
+  </form>
+</div>
+
+<h2>Users</h2>
 <ul class="list-unstyled">
   <li class="card card-body mb-2" *ngFor="let user of users">
     <h3>
