--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -6,31 +6,37 @@
   <form (submit)="onSubmit($event)">
     <div class="form-group">
       <label>First Name</label>
-      <input type="text" name="firstName" class="form-control">
+      <input type="text" [(ngModel)]="user.firstName" name="firstName" class="form-control">
+    </div>
+    {{user.firstName}}
+    <div class="form-group">
+      <label>First Name</label>
+      <input type="text" [(ngModel)]="user.lastName" name="lastName" class="form-control">
     </div>
 
     <div class="form-group">
       <label>Age</label>
-      <input type="number" name="age" class="form-control">
+      <input type="number" [(ngModel)]="user.age" name="age" class="form-control">
     </div>
 
     <div class="form-group">
       <label>Street Address</label>
-      <input type="text" name="city" class="form-control">
+      <input type="text" [(ngModel)]="user.address.street" name="city" class="form-control">
     </div>
 
     <div class="form-group">
       <label>City</label>
-      <input type="text" name="city" class="form-control">
+      <input type="text" [(ngModel)]="user.address.city" name="city" class="form-control">
     </div>
 
     <div class="form-group">
       <label>State</label>
-      <input type="text" name="state" class="form-control">
+      <input type="text" [(ngModel)]="user.address.state" name="state" class="form-control">
     </div>
 
-    <button (click)="addUser({firstName: 'Mary', lastName: 'Williams'})" 
-class="btn btn-block mb-3" [disabled]="!enableAdd">Add New User</button>
+    <button (click)="addUser()" 
+      class="btn btn-block mb-3" 
+      [disabled]="user.firstName == '' || user.lastName == ''">Add New User</button>
 
   </form>
 </div>
