--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -3,40 +3,83 @@
 <div *ngIf="showUserForm">
   <h2>Add User</h2>
 
-  <form (submit)="onSubmit($event)">
+  <form #userForm="ngForm" (submit)="onSubmit(userForm)">
     <div class="form-group">
+
       <label>First Name</label>
-      <input type="text" [(ngModel)]="user.firstName" name="firstName" class="form-control">
-    </div>
-    {{user.firstName}}
-    <div class="form-group">
-      <label>First Name</label>
-      <input type="text" [(ngModel)]="user.lastName" name="lastName" class="form-control">
+      <input 
+      type="text" 
+      [(ngModel)]="user.firstName" 
+      [ngClass]="{'is-invalid' : userFirstName.errors && userFirstName.touched}"
+      class="form-control"
+      name="firstName" 
+      #userFirstName="ngModel"
+      required
+      minlength="2"
+      >
+      <div [hidden]="!userFirstName.errors?.required"
+      class="invalid-feedback">
+        First name required
+      </div>
+
+      <div [hidden]="!userFirstName.errors?.minlength"
+      class="invalid-feedback">
+        Must be at least 2 characters
+      </div>
+
     </div>
 
     <div class="form-group">
-      <label>Age</label>
-      <input type="number" [(ngModel)]="user.age" name="age" class="form-control">
+      <label>Last Name</label>
+      <input 
+      type="text" 
+      [(ngModel)]="user.lastName" 
+      [ngClass]="{'is-invalid' : userLastName.errors && userLastName.touched}"
+      class="form-control"
+      name="lastName" 
+      #userLastName="ngModel"
+      required
+      minlength="2"
+      >
+      <div [hidden]="!userLastName.errors?.required"
+      class="invalid-feedback">
+        Last name required
+      </div>
+
+      <div [hidden]="!userLastName.errors?.minlength"
+      class="invalid-feedback">
+        Must be at least 2 characters
+      </div>
+
     </div>
 
     <div class="form-group">
-      <label>Street Address</label>
-      <input type="text" [(ngModel)]="user.address.street" name="city" class="form-control">
-    </div>
+      <label>Last Name</label>
+      <input 
+      type="email" 
+      [(ngModel)]="user.email" 
+      [ngClass]="{'is-invalid' : userEmail.errors && userEmail.touched}"
+      class="form-control"
+      name="email" 
+      #userEmail="ngModel"
+      required
+      email="true"
+      >
+      <div [hidden]="!userLastName.errors?.required"
+      class="invalid-feedback">
+        Last name required
+      </div>
 
-    <div class="form-group">
-      <label>City</label>
-      <input type="text" [(ngModel)]="user.address.city" name="city" class="form-control">
-    </div>
+      <div [hidden]="!userLastName.errors?.minlength"
+      class="invalid-feedback">
+        Must be at least 2 characters
+      </div>
 
-    <div class="form-group">
-      <label>State</label>
-      <input type="text" [(ngModel)]="user.address.state" name="state" class="form-control">
     </div>
 
     <button (click)="addUser()" 
       class="btn btn-block mb-3" 
-      [disabled]="user.firstName == '' || user.lastName == ''">Add New User</button>
+      [disabled]="!userForm.form.valid">Add New User</button>
 
   </form>
 </div>
@@ -46,18 +89,16 @@
   <li class="card card-body mb-2" *ngFor="let user of users">
     <h3>
       {{ user.firstName }} {{ user.lastName }}
-
-        <small *ngIf="user.age && user.address">
+        <small>
           <button (click)="user.hide = !user.hide" class="btn btn-dark btn-sm">
             <i [ngClass]="user.hide ? 'fa fa-plus' : 'fa fa-minus'"></i>
           </button>
         </small>
 
     </h3>
-    <ul class="list-group" *ngIf="!user.hide && user.age && user.address" >
-      <li class="list-group-item">Age: {{ user.age }}</li>
-      <li class="list-group-item">Address: {{ user.address.street }}</li>
-      <li class="list-group-item">Joined: {{ user.registered}}</li>
+    <ul class="list-group" *ngIf="!user.hide" >
+      <li class="list-group-item">Email: {{ user.email }}</li>
+
     </ul>
   </li>
 </ul>
