--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -54,20 +54,20 @@
     </div>
 
     <div class="form-group">
-      <label>Last Name</label>
+      <label>Email</label>
       <input 
       type="email" 
-      [(ngModel)]="user.email" 
-      [ngClass]="{'is-invalid' : userEmail.errors && userEmail.touched}"
-      class="form-control"
-      name="email" 
+      [(ngModel)]="user.email"
+      [ngClass]="{'is-invalid': userEmail.errors && userEmail.touched}"
+      class="form-control" 
+      name="email"
       #userEmail="ngModel"
       required
       email="true"
-      >
+     >
       <div [hidden]="!userLastName.errors?.required"
       class="invalid-feedback">
-        Last name required
+        Email is required
       </div>
 
       <div [hidden]="!userLastName.errors?.minlength"
@@ -77,7 +77,7 @@
 
     </div>
 
-    <button (click)="addUser()" 
+    <button 
       class="btn btn-block mb-3" 
       [disabled]="!userForm.form.valid">Add New User</button>
 
