39 HTTP Client Put Request

--- a/src/app/components/post-form/post-form.component.html
+++ b/src/app/components/post-form/post-form.component.html
@@ -30,7 +30,7 @@
 
       <button 
       *ngIf="isEdit"
-      (click)="addPost(title.value, body.value)"
+      (click)="updatePost(title.value, body.value)"
       class="btn btn-warning btn-block"
       >Update Post</button>
   </form>
