--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,7 +1,9 @@
 <app-post-form 
   [currentPost]="currentPost" 
   (newPost)="onNewPost($event)"
-  [isEdit]="isEdit"></app-post-form>
+  [isEdit]="isEdit"
+  (updatedPost)="onUpadatedPost($event)">
+</app-post-form>
 <h2>Posts</h2>
 <div class="card" *ngFor="let post of posts">
     <div class="card-body">
