--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
 <h1>Wellcome</h1>
 <p>This is the Angular front to back sandbox aplication</p>
-<button class="btn btn-secondary">User Section</button>
-<button class="btn dark">Post Section</button>
+<button class="btn btn-secondary" routerLink="/users">User Section</button>
+<button class="btn btn-dark" routerLink="/posts">Post Section</button>
